--- a/.github/workflows/deploy production.yml
+++ b/.github/workflows/deploy production.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: azure/webapps-deploy@v2
       with:
         app-name: 'prod-spring'
-        images: 'geekseat.azurecr.io/myapp:v-${{ github.run_number }}'
+        images: 'geekseat.azurecr.io/spring:v-${{ github.run_number }}'
     
     - name: Azure logout
       run: |
