--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
