--- a/.github/workflows/deploy development.yml
+++ b/.github/workflows/deploy development.yml
@@ -2,7 +2,8 @@ name: Deploy development
 on:
   push:
     branches: [ development ]
-
+  workflow_dispatch:
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -10,29 +11,43 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
-#     - name: Build the Docker image
-#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#     - name: 'Login via Azure CLI'
+#       uses: azure/login@v1
+#       with:
+#         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: 'Build and push image'
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
-    - run: |
-        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-${{ github.run_number }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-latest 
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-${{ github.run_number }}
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-latest
-    - uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'dev-spring'
-        images: 'geekseat.azurecr.io/spring:dev-${{ github.run_number }}'
+#     - name: 'Build and push image'
+#       uses: azure/docker-login@v1
+#       with:
+#         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+#         username: ${{ secrets.REGISTRY_USERNAME }}
+#         password: ${{ secrets.REGISTRY_PASSWORD }}
+#     - run: |
+#         docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-${{ github.run_number }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-latest 
+#         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-${{ github.run_number }}
+#         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spring:dev-latest
+#     - uses: azure/webapps-deploy@v2
+#       with:
+#         app-name: 'dev-spring'
+#         images: 'geekseat.azurecr.io/spring:dev-${{ github.run_number }}'
     
-    - name: Azure logout
-      run: |
-        az logout
+#     - name: Azure logout
+#       run: |
+#         az logout
+
+    - name: Docker Login
+      # You may pin to the exact commit or the version.
+      # uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
+      uses: docker/login-action@v2.2.0
+      with:
+        #username: # optional
+        password: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        # Specifies whether the given registry is ECR (auto, true or false)
+        ecr: # optional, default is auto
+        # Log out from the Docker registry at the end of a job
+        logout: # optional, default is true
+        
+    - run: |
+        docker build . -t nikiakbar/spring:development
+        docker push nikiakbar/spring:development
+        
