--- a/.github/workflows/deploy development.yml
+++ b/.github/workflows/deploy development.yml
@@ -40,7 +40,7 @@ jobs:
       # uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
       uses: docker/login-action@v2.2.0
       with:
-        #username: # optional
+        username: nikiakbar
         password: ${{ secrets.REGISTRY_LOGIN_SERVER }}
 
         
