--- a/.github/workflows/deploy development.yml
+++ b/.github/workflows/deploy development.yml
@@ -41,7 +41,7 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         username: nikiakbar
-        password: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        password: ${{ secrets.DOCKERHUB_PAT }}
 
         
     - run: |
